# vsm-agent-kernel

./: .gitignore  Cargo.toml  README.md
crates/vsm-amqp/: Cargo.toml
crates/vsm-amqp/src/: lib.rs  rabbit.rs
crates/vsm-controller/: Cargo.toml
crates/vsm-controller/examples/: controller_audit_smoke.rs  controller_trial_smoke.rs  controller_worker_in_memory.rs
crates/vsm-controller/src/: audit.rs  error.rs  evolution.rs  lib.rs  mapper.rs  router.rs  runtime.rs  trial.rs
crates/vsm-core/: Cargo.toml
crates/vsm-core/examples/: minimal_genome.rs
crates/vsm-core/src/: capability.rs  channel.rs  fitness.rs  genome.rs  id.rs  lib.rs  message.rs  node.rs  patch.rs  suggestion.rs  task.rs  trace.rs  transport.rs
crates/vsm-ledger/: Cargo.toml
crates/vsm-ledger/src/: error.rs  event.rs  ledger.rs  lib.rs  memory.rs  sqlite.rs  state.rs
crates/vsm-runtime/: Cargo.toml
crates/vsm-runtime/src/: in_memory_transport.rs  lib.rs  trial.rs
crates/vsm-system/: Cargo.toml
crates/vsm-system/examples/: local_evolution_cycle.rs
crates/vsm-system/src/: lib.rs
crates/vsm-worker/: Cargo.toml
crates/vsm-worker/examples/: codex_cli_in_memory.rs  codex_worker.rs  harness_in_memory.rs  local_worker.rs  rabbit_codex_worker.rs  rabbit_publish_task.rs
crates/vsm-worker/src/: codex.rs  error.rs  harness.rs  lib.rs  model.rs  prompt.rs  trace_sink.rs
examples/: local_sim.rs
src/: audit.rs  channel.rs  error.rs  genome.rs  ids.rs  lib.rs  message.rs  node.rs  runtime.rs  selection.rs  task.rs  trace.rs
src/transport/: in_memory.rs  mod.rs  rabbitmq.rs
