[package]
name = "vsm-agent-kernel"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A recursive VSM-based organizational genome kernel for autonomous coding agents."

[lib]
name = "vsm_agent_kernel"
path = "src/lib.rs"

[features]
default = []
rabbitmq = ["dep:lapin", "dep:futures-util"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1.8", features = ["v4", "serde"] }

# Optional RabbitMQ adapter. Core runtime never depends on RabbitMQ directly.
lapin = { version = "2.5", optional = true }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "sync", "time"] }
