[workspace]
resolver = "2"
members = [
    "crates/vsm-core",
    "crates/vsm-runtime",
    "crates/vsm-amqp",
    "crates/vsm-worker",
    "crates/vsm-controller",
    "crates/vsm-ledger",
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0"
rust-version = "1.78"

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures-core = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }

# Model-provider adapters
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Durable local ledger
rusqlite = { version = "0.31", features = ["bundled"] }