[package]
name = "vsm-amqp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
futures-core.workspace = true
futures-util.workspace = true
lapin = "2"
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
vsm-core = { path = "../vsm-core" }
