[package]
name = "vsm-controller"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
vsm-core = { path = "../vsm-core" }
vsm-ledger = { path = "../vsm-ledger" }

[dev-dependencies]
vsm-runtime = { path = "../vsm-runtime" }
vsm-worker = { path = "../vsm-worker" }
