[package]
name = "vsm-system"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
vsm-controller = { path = "../vsm-controller" }
vsm-core = { path = "../vsm-core" }
vsm-ledger = { path = "../vsm-ledger" }
vsm-runtime = { path = "../vsm-runtime" }
vsm-worker = { path = "../vsm-worker" }
