[package]
name = "vsm-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
vsm-core = { path = "../vsm-core" }

[dev-dependencies]
vsm-runtime = { path = "../vsm-runtime" }
vsm-amqp = { path = "../vsm-amqp" }
